syntax = "proto3";
package mless;

import "google/protobuf/timestamp.proto";

/*
 * Core messages
 */

message Server {
  string id = 1;
  string addr = 2;
}

message Deployment {
  string id = 1;
  string source = 2;
  repeated Server servers = 3;
}

message QoS {}

/*
 * Scheduler services
 */

service Scheduler {
  rpc Join(JoinRequest) returns (JoinResponse);

  rpc Deploy(DeploymentRequest) returns (DeployResponse);
  rpc Lookup(LookupRequest) returns (LookupResponse);
}

message JoinRequest { string addr = 1; }
message JoinResponse {
  bool success = 1;
  Server server = 2;
}

message LookupRequest {
  string deployment_id = 1;
  QoS qos = 2;
}
message LookupResponse {
  bool success = 1;
  Deployment deployment = 2;
  Server server = 3;
}

message DeploymentRequest { string source = 1; }
message DeployResponse {
  bool success = 1;
  Deployment deployment = 2;
}

/*
 * Server Daemon services
 */

service ServerDaemon {
  // For monitoring.
  rpc Ping() returns (PingResponse);
  rpc Monitor(MonitorRequest) returns (MonitorResponse);

  // App Instance management.
  rpc Spawn(SpawnRequest) returns (SpawnResponse);
  rpc Destroy(DestroyRequest) returns (DestroyResponse);

  // In addition, the Server Daemon proxies any requsets that is not to package
  // "mless".
}

message PingResponse { bool success = 1; }

message MonitorRequest { TimeWindow window = 1; }
message MonitorResponse { repeated MonitorWindow windows = 1; }

message TimeWindow {
  Timestamp start = 1;
  Timestamp end = 2;
}
message MonitorWindow {
  TimeWindow window = 1;
  ResourceUtilization utilization = 2;
}
message ResourceUtilization {
  int32 cpu = 1;
  int32 ram_total = 2;
  int32 ram_used = 3;
  int32 gpu = 4;
  int32 vram_total = 5;
  int32 vram_used = 6;
}

message SpawnRequest { string deployment_id = 1; }
message SpawnResponse {
  bool success = 1;
  Deployment deployment = 2;
  Server server = 3;
}

message DestroyRequest {
  string app_id = 1;
  DestroyReason reason = 2;
}
message DestroyResponse { bool success = 1; }

message DestroyReason {
  DESTROY_REASON_UNKNOWN = 0;
  SCALE_IN = 1;
  REMOVED = 2;
}
